--- a/Project.01-HTML/blog.html
+++ b/Project.01-HTML/blog.html
@@ -27,9 +27,9 @@
         </div>
 
         <div>
-            <h3>Tentang Indonesia</h3>
-            <h3>Tentang UUD 1945</h3>
-            <h3>Tentang Pancasila</h3>
+            <h3><a href="https://id.wikipedia.org/wiki/Indonesia">Tentang Indonesia</a></h3>
+            <h3><a href="https://id.wikipedia.org/wiki/Undang-Undang_Dasar_Negara_Republik_Indonesia_Tahun_1945">Tentang UUD 1945</a></h3>
+            <h3><a href="https://id.wikipedia.org/wiki/Pancasila">Tentang Pancasila</a></h3>
         </div>
     </body>
 </html>
