penambahan css file dan perubahan
beberapa perubahan dilakukan di file HTML

--- a/Project.01-HTML/contact.html
+++ b/Project.01-HTML/contact.html
@@ -4,34 +4,34 @@
         <title>
             CONTACT
         </title>
-        
+        <link href="style1.css" rel="stylesheet" type="text/css" />
     </head>
 
     <body>
         <!-- bar navigasi -->
-        <div>
-            <u1 >
-                <li > 
-                    <a href="index.html">HOME</a>
-                </li>
-                <li >
-                    <a href="gallery.html">GALLERY</a>
-                </li>
-                <li >
-                    <a href="blog.html">BLOG</a>
-                </li>
-                <li >
-                    <a href="contact.html">CONTACT</a>
-                </li>
-            </u1>
+        <div class="navigasi">
+            <li class="li"> 
+                <a href="index.html" class="teks-nav">HOME</a>
+            </li>
+            <li class="li">
+                <a href="gallery.html " class="teks-nav">GALLERY</a>
+            </li>
+            <li class="li">
+                <a href="blog.html" class="teks-nav">BLOG</a>
+            </li>
+            <li class="li">
+                <a href="contact.html" class="teks-nav">CONTACT</a>
+            </li>
         </div>
         <!-- konten -->
-        <div>
+        <div class="konten">
             <figure>
-            <img src="f2.png">
-            <figcaption>
-                <a>PENULIS</a>
-            </figcaption>
+                <a target="_blank" href="f2.png">
+                    <img src="f2.png" width="200px" height="200px">
+                    <figcaption>
+                        <a target="_blank" href="https://www.facebook.com/profile" class="con-text">PENULIS</a>
+                    </figcaption>
+                </a>
             </figure>
         </div>
     </body>
