--- a/Project.01-HTML/gallery.html
+++ b/Project.01-HTML/gallery.html
@@ -4,33 +4,54 @@
         <title>
             GALLERY
         </title>
-        
+        <link href="style1.css" rel="stylesheet" type="text/css" />
     </head>
 
     <body>
         <!-- bar navigasi -->
-        <div>
-            <u1 >
-                <li> 
-                    <a href="index.html">HOME</a>
-                </li>
-                <li>
-                    <a href="gallery.html">GALLERY</a>
-                </li>
-                <li>
-                    <a href="blog.html">BLOG</a>
-                </li>
-                <li>
-                    <a href="contact.html">CONTACT</a>
-                </li>
-            </u1>
+        <div class="navigasi">
+            <li class="li"> 
+                <a href="index.html" class="teks-nav">HOME</a>
+            </li>
+            <li class="li">
+                <a href="gallery.html " class="teks-nav">GALLERY</a>
+            </li>
+            <li class="li">
+                <a href="blog.html" class="teks-nav">BLOG</a>
+            </li>
+            <li class="li">
+                <a href="contact.html" class="teks-nav">CONTACT</a>
+            </li>
         </div>
         <!-- konten -->
-        <div>
-            <img src="Bendera Indonesia.png" alt="bendera Indonesia" width="100px" height="100px">
-            <img src="UUD 1945.png" alt="UUD 1945"  width="100px" height="100px">
-            <img src="pancasila.jpg" alt="pancasila" width="100px" height="100px">
-            <img src="Universitas Sam Ratulangi.png" alt="Logo UNSRAT" width="100px" height="100px">
+        <div class="konten">
+            <h1>Semua Gambar yang dipakai</h1>
+                    <figure>
+                        <div class="gal-box">
+                            <a target="_blank" href="Bendera Indonesia.png" class="gal-a">
+                                <img src="Bendera Indonesia.png" alt="bendera Indonesia" width="150" height="150">
+                                <p>Bendera Indonesia</p>
+                            </a>
+                        </div>
+                        <div class="gal-box">
+                            <a target="_blank" href="UUD 1945.png" class="gal-a">
+                                <img src="UUD 1945.png" alt="UUD 1945"  width="150" height="150">
+                                <p>UUD 1945</p>
+                            </a>
+                        </div>
+                        <div class="gal-box">
+                            <a target="_blank" href="pancasila.jpg" class="gal-a">
+                                <img src="pancasila.jpg" alt="pancasila" width="auto" height="150">
+                                <p>Pancasila</p>
+                            </a>
+                        </div>
+                        <div class="gal-box">
+                            <a target="_blank" href="Universitas Sam Ratulangi.png" class="gal-a">
+                                <img src="Universitas Sam Ratulangi.png" alt="Logo UNSRAT" width="auto" height="150">
+                                <p>Logo Universitas Sam Ratulangi</p>
+                            </a>
+                        </div>
+                    </figure>
         </div>
     </body>
 </html>
