--- a/Project.01-HTML/index.html
+++ b/Project.01-HTML/index.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html>
     <head>
-            
         <title>
             TIK2023-PROJECT 
         </title>
+        <link href="style1.css" rel="stylesheet" type="text/css" />
     </head>
 
     <body>
         <!-- bar navigasi -->
         <div class="navigasi">
-            <u1 class="ui">
-                <li> 
-                    <a href="index.html">HOME</a>
-                </li>
-                <li>
-                    <a href="gallery.html">GALLERY</a>
-                </li>
-                <li>
-                    <a href="blog.html">BLOG</a>
-                </li>
-                <li>
-                    <a href="contact.html">CONTACT</a>
-                </li>
-            </u1>
+            <li class="li"> 
+                <a href="index.html" class="teks-nav">HOME</a>
+            </li>
+            <li class="li">
+                <a href="gallery.html " class="teks-nav">GALLERY</a>
+            </li>
+            <li class="li">
+                <a href="blog.html" class="teks-nav">BLOG</a>
+            </li>
+            <li class="li">
+                <a href="contact.html" class="teks-nav">CONTACT</a>
+            </li>
         </div>
         <!-- konten -->
         <div class="konten">
-            <a href="https://www.unsrat.ac.id/"><img src="Universitas Sam Ratulangi.png" width="20%" height="20%"></a>
-            <h1>SELAMAT DATANG <a href="blog.html">DI SINI</a></h3>
+            <a target="_blank" href="https://www.unsrat.ac.id/"><img src="Universitas Sam Ratulangi.png" width="20%" height="20%"></a>
+            <h1>
+                SELAMAT DATANG, <a href="blog.html" class="sisip">di sini</a> <br> 
+                kita menyimpan gambar <a href="gallery.html" class="sisip">RANDOM</a>
+            </h1>
         </div>
     </body>
 </html>
