--- a/Project.01-HTML/contact.html
+++ b/Project.01-HTML/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-theme ="light">
     <head>
         <title>
             CONTACT
@@ -22,6 +22,13 @@
             <li class="li">
                 <a href="contact.html" class="teks-nav">CONTACT</a>
             </li>
+
+            <button class="dl-button" type="button" 
+            data-theme-toggle 
+            aria-label="Change to light theme">
+                Change to light theme
+            </button>
+            <script src="darkmode.js"></script>
         </div>
         <!-- konten -->
         <div class="konten">
