--- a/Project.01-HTML/index.html
+++ b/Project.01-HTML/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-theme ="light">
     <head>
         <title>
             TIK2023-PROJECT 
@@ -22,6 +22,14 @@
             <li class="li">
                 <a href="contact.html" class="teks-nav">CONTACT</a>
             </li>
+
+            <button class="dl-button" type="button" 
+            data-theme-toggle 
+            aria-label="Change to light theme">
+                Change to light theme
+            </button>
+            <script src="darkmode.js"></script>
+            
         </div>
         <!-- konten -->
         <div class="konten">
@@ -31,5 +39,6 @@
                 kita menyimpan gambar <a href="gallery.html" class="sisip">RANDOM</a>
             </h1>
         </div>
+    
     </body>
 </html>
